# fgcOS

./: mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: learn-github-actions.yml  mkdocs-simple.yml  mkdocs.yml
docs/: Special K.md  index.md
docs/.obsidian/: app.json  appearance.json  community-plugins.json  daily-notes.json  hotkeys.json  workspace.json  zk-prefixer.json
docs/.obsidian/plugins/obsidian-admonition/: data.json
docs/.obsidian/plugins/obsidian-mkdocs-publisher/: data.json
docs/assets/: graph.html
docs/assets/css/: custom_attributes.css
docs/blog/: 2023-04-23-10-18-am Site Launch.md  2023-04-23-11-41-am Deployment Improvement.md
docs/hidden/: Low-End Machines.md  tags.md
docs/install/: Installation.md  Optimization.md
docs/install/.obsidian/: app.json  workspace.json
docs/templates/: Zettelkasten.md
docs/timestamps/: 2023-04-23-9-14-am.md  2023-04-23-9-15-am.md
docs/tweaks/: DS4 Windows.md
site/: 404.html  index.html  sitemap.xml
site/assets/: graph.html
site/assets/css/: admonition.css  custom_attributes.css  fgcos.css.bak
site/assets/javascripts/: decrypt-contents.js
site/blog/2023-04-23-10-18-am Site Launch/: index.html
site/blog/2023-04-23-11-41-am Deployment Improvement/: index.html
site/hidden/Low-End Machines/: index.html
site/hidden/tags/: index.html
site/install/Installation/: index.html
site/install/Optimization/: index.html
site/search/: search_index.json
site/timestamps/2023-04-23-9-14-am/: index.html
site/timestamps/2023-04-23-9-15-am/: index.html
(+2 files in other folders)
